final version - button border spacing fixed

--- a/homework01/assets/css/style.css
+++ b/homework01/assets/css/style.css
@@ -37,12 +37,34 @@ body {
     right: 125px;
     float: right;
     margin-top: 20px;
-    margin-right: 50px;
-    align-items: center;
+    margin-right: 100px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #4aaaa5;
     width: 50px;
     font-size: 16px;
+    border-left: 1px solid #4aaaa5;
+}
+
+#header-about {
+    float: right;
+    border-left: 0 none;
+    margin-right: 5px;
+}
+
+#header-portfolio {
+    float: right;
+    padding-left: 10px;
+    padding-right: 5px;
+    margin-right: 15px;
+}
+
+#header-contact {
+    float: right;
+    padding-left: 10px;
+}
+
+a.default {
+    color: #4aaaa5;
 }
 
 a:link {
